--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
 .flex-header-top {
  display: flex;
  height: 60px;
- background-color: rgb(28, 231, 235);
+ background-color: #255ee9;
  justify-content: center;
  align-items: center;
 }
 
 ul{
-    width: 40%;
+    width: 50%;
     display: flex;
     justify-content: space-between;
 }
@@ -22,9 +22,10 @@ ul{
 .flex-menu{
     display: flex;
     color: rgb(254, 254, 254);
-    width: 60%;
+    width: 70%;
     justify-content: space-between;
     align-items: center;
+    
 }    
 
 .item-1{
@@ -44,9 +45,10 @@ ul{
 .flex-header-bot{
     display: flex;
     height: 400px;
-    background-color: blue;
     justify-content: center;
     align-items: center;
+    background-image: url("../img/jumbo.png");
+    background-size: cover;
 }
 
 .flex-header-container{
@@ -55,6 +57,7 @@ ul{
     width: 40%;
     background-color: pink;
     border-style: dotted;
+    background-size: contain;
 
 }
 
