--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,30 @@ ul{
 }
 
 .flex-header-container{
+    margin-top: 70px;
     display: flex;
     height: 300px;
-    width: 40%;
-    background-color: pink;
-    border-style: dotted;
+    width: 45%;
     background-size: contain;
 
+}
+button.download-mac {
+    font-size: larger;
+    padding: 10px;
+    border-radius: 35%;
+    border-style: none;
+}
+.container-content{
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.container-content h2{
+    padding: 20px;
+    font-size: 40px;
+    
 }
 
 
