--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,8 @@ button.download-mac {
 
 
 .flex-main-div1{
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     height: 500px;
     background-color: white;
@@ -106,49 +108,65 @@ button.download-mac {
 
 .flex-container1{
     display: flex;
-    height: 400px;
-    border-style: dotted;
+    height: 450px;
     width: 60%;
     flex-wrap: wrap;
     margin: 25px;
 }
 
 .flex-main-div2{
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: grey;
+    background-color: #f2f2f2;
 }
 
 .bluediv{
-        background-color: blue;
         width: 60%;
         height: 100%;
 }
 
 .pinkdiv{
-    background-color: rgb(253, 46, 247);
         width: 40%;
         height: 100%;
 }
 
+.pinkdiv h3{
+    font-size: 60px;
+
+}
+.pinkdiv p{
+    font-size: 26px;
+    padding-top: 20px;
+}
+
+.bluedivspc h3{
+    font-size: 60px;
+
+}
+.bluedivspc p{
+    font-size: 26px;
+    padding-top: 20px;
+}
+
 .bluedivspc{
-    background-color: rgb(255, 0, 230);
     width: 40%;
     height: 100%;
 }
 
 .pinkdivspc{
-background-color: rgb(47, 0, 255);
     width: 60%;
     height: 100%;
 }
+
 
 .flex-main-divbot{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: grey;
+    background-color: #f2f2f2;
 }
 
 .flex-containerbot{
