--- a/css/style.css
+++ b/css/style.css
@@ -167,16 +167,18 @@ button.download-mac {
     align-items: center;
     justify-content: center;
     background-color: #f2f2f2;
+    flex-wrap: wrap;
 }
 
 .flex-containerbot{
     display: flex;
-    height: 800px;
     width: 60%;
     flex-wrap: wrap;
     margin: 25px;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin-bottom: 150px;
 }
 
 
@@ -187,6 +189,45 @@ button.download-mac {
     justify-content: center;
     background-color: rgb(35, 34, 34);
 }
+
+.divcontainerbot{
+    
+    width: 80%;
+    text-align: center;
+    font-size: 20px;
+}
+
+.divcontainerbot h1{
+    padding: 40px;
+    font-size: 36px;
+}
+
+.divcontainerbot2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.download-macbot {
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 35%;
+    border-style: none;
+    margin: auto;
+    color: white;
+    background-color: #255ee9;
+}
+
+.div-containerbottext{
+    height: 50px;
+    padding: 50px;
+    display: flex;
+    background-image: url(../img/stars.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+
+}
+
 .flex-containerfooter{
     display: flex;
     flex-direction: row;
