--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
  align-items: center;
 }
 
+.container-content p {
+    margin-bottom: 20px;
+}
+
+
 ul{
     width: 50%;
     display: flex;
@@ -63,22 +68,22 @@ ul{
     display: flex;
     justify-content: center;
     padding: 6px 14px;
-    border-radius: 6px;
+    border-radius: 16px;
 
 }
 button.download-mac {
-    font-size: 20px;
-    padding: 6px 14px;
-    border-radius: 6px;
+    font-size: 18px;
+    padding: 13px 14px;
+    border-radius: 24px;
     border-style: none;
     margin: auto;
 }
 .discord-on-browser{
-    font-size: 20px;
-    padding: 6px 14px;
-    border-radius: 6px;
+    font-size: 18px;
+    padding: 13px 14px;
+    border-radius: 24px;
     border-style: none;
-    background-color: black;
+    background-color: rgb(41, 40, 40);
     color: white;
     margin: auto;
 }
@@ -211,8 +216,8 @@ button.download-mac {
 
 .download-macbot {
     font-size: 20px;
-    padding: 6px 14px;
-    border-radius: 6px;
+    padding: 13px 14px;
+    border-radius: 24px;
     border-style: none;
     margin: auto;
     color: white;
@@ -315,7 +320,7 @@ li.listtilebig {
 
 .register-button{
     padding: 6px 14px;
-    border-radius: 6px;
+    border-radius: 15px;
     background-color: #255ee9;
     border: none;
     color: white;
